HBASE-25983 javadoc generation fails on openjdk-11.0.11+9 (#4837)
Signed-off-by: Nick Dimiduk <ndimiduk@apache.org>
(cherry picked from commit 792f12b616ea67822064b64febaf43479a890195)
(cherry picked from commit a8d972609187faa03d6a2ef890c049a333f6495f)
Change-Id: I6635fe1f2051e73d4711fdb15894dedfb0e8897f